= Change Log

Below is a complete listing of changes for each revision of FasterCSV.

== 1.2.1

* Worked around an odd incompatibility with the Regexps used to remove line
  endings in some (seemingly rare) Ruby environments.
* Made FasterCSV::lineno() writer aware.
* Support Hashes in FasterCSV#<<(), by detecting headers when writing.

== 1.2.0

* Added the FasterCSV::table() shortcut.

== 1.1.1

* Added a <tt>:force_quotes</tt> output option.

== 1.1.0

* Added empty?(), length(), and size() methods to FasterCSV::Row and
  FasterCSV::Table.
* Cleaned up bug fix regression tests.
* Fixed bug causing Arrays to be returned for blank rows when header processing
  is active.
* Added a <tt>:skip_blanks</tt> option for ignoring empty rows.

== 1.0.0

* Fixed FasterCSV.rewind() to reset the FasterCSV.lineno() counter.
* Fixed FasterCSV.rewind() to reset the header processing.
* Fixed documentation typos.
* Switched STDOUT and STDERR usage to $stdout and $stderr where appropriate.
* Added FasterCSV::Row.==().
* Enhanced FasterCSV::Row.fields() to support Ranges, even for headers.
* The slurping methods now return the new FasterCSV::Table objects.
* Fixed parser so multibyte <tt>:col_sep</tt> works now.
* Added a few examples for usage.

== 0.2.1

* Removed autorequire from GemSpec.
* Made Rakefile VERSION aware.
* General Rakefile cleanup.

== 0.2.0

* Added VERSION constant.
* Significantly improved test speed.
* Worked around Date::parse() bug so tests will pass on Windows.
* Documented test procedure.
* Made FasterCSV.lineno() CSV aware.
* Added line numbers to MalformedCSVError messages.
* <tt>:headers</tt> can now be set to an Array of headers to use.
* <tt>:headers</tt> can now be set to an external CSV String of headers to use.
* Added an <tt>:unconverted_fields</tt> options, so those can be returned
  when needed.
* Provided support for the serialization of custom Ruby objects using CSV.
* Added CSV drop-in interface.